--- a/lib/l10n/intl_th.arb
+++ b/lib/l10n/intl_th.arb
@@ -4456,7 +4456,7 @@
   "playWithAI": "เล่นกับ AI ชั่วคราว",
   "courseStartDesc": "Pangea Bot พร้อมที่จะเริ่มต้นได้ทุกเมื่อ!\n\n...แต่การเรียนรู้ดีกว่ากับเพื่อน!",
   "@@locale": "th",
-  "@@last_modified": "2025-12-29 16:03:13.573254",
+  "@@last_modified": "2026-01-05 15:41:11.186302",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11771,6 +11771,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "การอนุญาตถูกปฏิเสธ เปิดใช้งานการอนุญาตการบันทึกเพื่อบันทึกข้อความเสียง",
+  "genericWebRecordingError": "เกิดข้อผิดพลาดบางอย่าง เราขอแนะนำให้ใช้เบราว์เซอร์ Chrome เมื่อบันทึกข้อความ",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
