--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ar",
-  "@@last_modified": "2025-12-29 16:03:18.962096",
+  "@@last_modified": "2026-01-05 15:41:19.605921",
   "about": "حول",
   "@about": {
     "type": "String",
@@ -10930,6 +10930,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "تم رفض الإذن. قم بتمكين أذونات التسجيل لتسجيل الرسائل الصوتية.",
+  "genericWebRecordingError": "حدث خطأ ما. نوصي باستخدام متصفح Chrome عند تسجيل الرسائل.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
