--- a/lib/l10n/intl_cs.arb
+++ b/lib/l10n/intl_cs.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "cs",
-  "@@last_modified": "2025-12-29 16:03:07.960576",
+  "@@last_modified": "2026-01-05 15:41:05.083147",
   "about": "O aplikaci",
   "@about": {
     "type": "String",
@@ -11320,6 +11320,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "Přístup odepřen. Povolte oprávnění pro nahrávání, abyste mohli nahrávat audio zprávy.",
+  "genericWebRecordingError": "Něco se pokazilo. Doporučujeme používat pro nahrávání zpráv prohlížeč Chrome.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
