--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "es",
-  "@@last_modified": "2025-12-29 16:02:35.926601",
+  "@@last_modified": "2026-01-05 15:40:28.598615",
   "about": "Acerca de",
   "@about": {
     "type": "String",
@@ -7947,6 +7947,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "Permiso denegado. Habilita los permisos de grabación para grabar mensajes de audio.",
+  "genericWebRecordingError": "Algo salió mal. Recomendamos usar el navegador Chrome al grabar mensajes.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
