--- a/lib/l10n/intl_et.arb
+++ b/lib/l10n/intl_et.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "et",
-  "@@last_modified": "2025-12-29 16:03:00.536194",
+  "@@last_modified": "2026-01-05 15:40:54.935867",
   "about": "Rakenduse teave",
   "@about": {
     "type": "String",
@@ -10984,6 +10984,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "Luba keelatud. Aktiveeri salvestamise õigused, et salvestada helisõnumeid.",
+  "genericWebRecordingError": "Midagi läks valesti. Soovitame sõnumite salvestamiseks kasutada Chrome'i brauserit.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
