--- a/lib/l10n/intl_eu.arb
+++ b/lib/l10n/intl_eu.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "eu",
-  "@@last_modified": "2025-12-29 16:02:58.251989",
+  "@@last_modified": "2026-01-05 15:40:52.261580",
   "about": "Honi buruz",
   "@about": {
     "type": "String",
@@ -10713,6 +10713,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "Baimena ukatu da. Aktibatu grabatzeko baimenak audio mezuak grabatzeko.",
+  "genericWebRecordingError": "Zerbait oker joan da. Mezuak grabatzerakoan Chrome nabigatzailea erabiltzea gomendatzen dugu.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
