--- a/lib/l10n/intl_ga.arb
+++ b/lib/l10n/intl_ga.arb
@@ -4517,7 +4517,7 @@
   "playWithAI": "Imir le AI faoi láthair",
   "courseStartDesc": "Tá Bot Pangea réidh chun dul am ar bith!\n\n...ach is fearr foghlaim le cairde!",
   "@@locale": "ga",
-  "@@last_modified": "2025-12-29 16:03:49.650305",
+  "@@last_modified": "2026-01-05 15:41:56.477999",
   "@customReaction": {
     "type": "String",
     "placeholders": {}
@@ -10711,6 +10711,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "Diúltaíodh an cead. Gníomhachtaigh ceadanna taifeadta chun teachtaireachtaí guth a thaifeadadh.",
+  "genericWebRecordingError": "Tharla rud éigin mícheart. Molaimid úsáid a bhaint as brabhsálaí Chrome nuair a bhíonn teachtaireachtaí á gcur ar taifead.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
