--- a/lib/l10n/intl_he.arb
+++ b/lib/l10n/intl_he.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-29 16:02:53.990837",
+  "@@last_modified": "2026-01-05 15:40:47.743886",
   "about": "אודות",
   "@about": {
     "type": "String",
@@ -11762,6 +11762,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "ההרשאה נדחתה. אפשר הרשאות הקלטה כדי להקליט הודעות קול.",
+  "genericWebRecordingError": "משהו השתבש. אנו ממליצים להשתמש בדפדפן כרום כאשר מקליטים הודעות.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
