--- a/lib/l10n/intl_ia.arb
+++ b/lib/l10n/intl_ia.arb
@@ -1958,7 +1958,7 @@
   "playWithAI": "Joca con le IA pro ora",
   "courseStartDesc": "Pangea Bot es preste a comenzar a qualunque momento!\n\n...ma apprender es melior con amicos!",
   "@@locale": "ia",
-  "@@last_modified": "2025-12-29 16:02:55.578229",
+  "@@last_modified": "2026-01-05 15:40:49.395999",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11791,6 +11791,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "Permisiun denegada. Aktivar permisiun de registru por registru mesajes de audio.",
+  "genericWebRecordingError": "Algu reso mal. Nos rekomenda usar el navegador Chrome cuando registrando mensajes.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
