--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-29 16:02:33.926636",
+  "@@last_modified": "2026-01-05 15:40:26.274698",
   "about": "소개",
   "@about": {
     "type": "String",
@@ -10821,6 +10821,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "권한이 거부되었습니다. 오디오 메시지를 녹음하려면 녹음 권한을 활성화하세요.",
+  "genericWebRecordingError": "문제가 발생했습니다. 메시지를 녹음할 때 Chrome 브라우저를 사용하는 것이 좋습니다.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
