--- a/lib/l10n/intl_lt.arb
+++ b/lib/l10n/intl_lt.arb
@@ -3861,7 +3861,7 @@
   "playWithAI": "Žaiskite su dirbtiniu intelektu dabar",
   "courseStartDesc": "Pangea botas pasiruošęs bet kada pradėti!\n\n...bet mokymasis yra geresnis su draugais!",
   "@@locale": "lt",
-  "@@last_modified": "2025-12-29 16:03:23.746515",
+  "@@last_modified": "2026-01-05 15:41:25.029050",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11518,6 +11518,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "Leidimas atmestas. Įgalinkite įrašymo leidimus, kad galėtumėte įrašyti garso pranešimus.",
+  "genericWebRecordingError": "Kažkas nepavyko. Rekomenduojame naudoti „Chrome“ naršyklę įrašant pranešimus.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
