--- a/lib/l10n/intl_nb.arb
+++ b/lib/l10n/intl_nb.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-29 16:03:09.114788",
+  "@@last_modified": "2026-01-05 15:41:06.923354",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -11806,6 +11806,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "Tillatelse nektet. Aktiver opptakstillatelser for å ta opp lydmeldinger.",
+  "genericWebRecordingError": "Noe gikk galt. Vi anbefaler å bruke Chrome-nettleseren når du tar opp meldinger.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
