--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ru",
-  "@@last_modified": "2025-12-29 16:03:45.093189",
+  "@@last_modified": "2026-01-05 15:41:50.642849",
   "about": "О проекте",
   "@about": {
     "type": "String",
@@ -10818,6 +10818,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "Доступ запрещен. Включите разрешения на запись, чтобы записывать аудиосообщения.",
+  "genericWebRecordingError": "Что-то пошло не так. Мы рекомендуем использовать браузер Chrome для записи сообщений.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
