--- a/lib/l10n/intl_sv.arb
+++ b/lib/l10n/intl_sv.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-29 16:03:36.702673",
+  "@@last_modified": "2026-01-05 15:41:41.694366",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -11191,6 +11191,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "Åtkomst nekad. Aktivera inspelningsbehörigheter för att spela in ljudmeddelanden.",
+  "genericWebRecordingError": "Något gick fel. Vi rekommenderar att du använder webbläsaren Chrome när du spelar in meddelanden.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
