--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "uk",
-  "@@last_modified": "2025-12-29 16:03:06.773179",
+  "@@last_modified": "2026-01-05 15:41:03.338417",
   "about": "Про застосунок",
   "@about": {
     "type": "String",
@@ -10707,6 +10707,16 @@
     "placeholders": {}
   },
   "@disableLanguageToolsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "recordingPermissionDenied": "Доступ заборонено. Увімкніть дозволи на запис, щоб записувати аудіоповідомлення.",
+  "genericWebRecordingError": "Щось пішло не так. Рекомендуємо використовувати браузер Chrome для запису повідомлень.",
+  "@recordingPermissionDenied": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@genericWebRecordingError": {
     "type": "String",
     "placeholders": {}
   }
