--- a/lib/l10n/intl_ka.arb
+++ b/lib/l10n/intl_ka.arb
@@ -2594,7 +2594,7 @@
   "playWithAI": "ამ დროისთვის ითამაშეთ AI-თან",
   "courseStartDesc": "Pangea Bot მზადაა ნებისმიერ დროს გასასვლელად!\n\n...მაგრამ სწავლა უკეთესია მეგობრებთან ერთად!",
   "@@locale": "ka",
-  "@@last_modified": "2026-01-05 15:41:52.364536",
+  "@@last_modified": "2026-01-05 16:38:35.679503",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11753,6 +11753,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "ამ აპლიკაციის საუკეთესო გამოცდილებისათვის, გთხოვთ, გააფართოვოთ თქვენი ეკრანის ზომა.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
