--- a/lib/l10n/intl_ro.arb
+++ b/lib/l10n/intl_ro.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2026-01-05 15:40:39.785568",
+  "@@last_modified": "2026-01-05 16:37:45.672693",
   "about": "Despre",
   "@about": {
     "type": "String",
@@ -11458,6 +11458,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "Pentru cea mai bună experiență utilizând această aplicație, vă rugăm să extindeți dimensiunea ecranului.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
