--- a/lib/l10n/intl_ta.arb
+++ b/lib/l10n/intl_ta.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2026-01-05 15:41:29.223500",
+  "@@last_modified": "2026-01-05 16:38:19.591743",
   "acceptedTheInvitation": "👍 {username} அழைப்பை ஏற்றுக்கொண்டது",
   "@acceptedTheInvitation": {
     "type": "String",
@@ -10947,6 +10947,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "இந்த பயன்பாட்டைப் பயன்படுத்துவதற்கான சிறந்த அனுபவத்திற்காக, உங்கள் திரை அளவை விரிவாக்கவும்.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
