--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ar",
-  "@@last_modified": "2026-01-05 15:41:19.605921",
+  "@@last_modified": "2026-01-05 16:38:13.770707",
   "about": "حول",
   "@about": {
     "type": "String",
@@ -10940,6 +10940,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "لأفضل تجربة عند استخدام هذا التطبيق، يرجى توسيع حجم الشاشة لديك.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
