--- a/lib/l10n/intl_be.arb
+++ b/lib/l10n/intl_be.arb
@@ -1911,7 +1911,7 @@
   "playWithAI": "Пакуль гуляйце з ШІ",
   "courseStartDesc": "Pangea Bot гатовы да працы ў любы час!\n\n...але навучанне лепш з сябрамі!",
   "@@locale": "be",
-  "@@last_modified": "2026-01-05 15:41:08.154486",
+  "@@last_modified": "2026-01-05 16:38:05.473989",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11822,6 +11822,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "Для найлепшага досведу выкарыстання гэтага прыкладання, калі ласка, пашырыце памер экрана.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
