--- a/lib/l10n/intl_bo.arb
+++ b/lib/l10n/intl_bo.arb
@@ -4279,7 +4279,7 @@
   "joinPublicTrip": "མི་ཚེས་ལ་ལོག་འབད།",
   "startOwnTrip": "ངེད་རང་གི་ལོག་ལ་སྦྱོར་བཅོས།",
   "@@locale": "bo",
-  "@@last_modified": "2026-01-05 15:41:32.823673",
+  "@@last_modified": "2026-01-05 16:38:21.732804",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -10477,6 +10477,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "Bokor na bɛyɛ a, bɔkɔ a ɛyɛ fɛ a, yɛsrɛ sɛ bɔ wo bɔkɔ no mu.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
