--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5014,5 +5014,6 @@
   "disableLanguageToolsTitle": "Disable language tools",
   "disableLanguageToolsDesc": "Would you like to disable automatic language assistance?",
   "recordingPermissionDenied": "Permission denied. Enable recording permissions to record audio messages.",
-  "genericWebRecordingError": "Something went wrong. We recommend using the Chrome browser when recording messages."
+  "genericWebRecordingError": "Something went wrong. We recommend using the Chrome browser when recording messages.",
+  "screenSizeWarning": "For the best experience using this application, please expand your screen size."
 }
