--- a/lib/l10n/intl_eo.arb
+++ b/lib/l10n/intl_eo.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2026-01-05 15:41:49.092421",
+  "@@last_modified": "2026-01-05 16:38:33.016786",
   "about": "Prio",
   "@about": {
     "type": "String",
@@ -11812,6 +11812,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "Por la plej bona sperto uzante ĉi tiun aplikaĵon, bonvolu vastigi vian ekranan grandecon.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
