--- a/lib/l10n/intl_fa.arb
+++ b/lib/l10n/intl_fa.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2026-01-05 15:41:37.531088",
+  "@@last_modified": "2026-01-05 16:38:24.728515",
   "repeatPassword": "تکرار رمزعبور",
   "@repeatPassword": {},
   "about": "درباره",
@@ -11455,6 +11455,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "برای بهترین تجربه در استفاده از این برنامه، لطفاً اندازه صفحه خود را بزرگتر کنید.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
