--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "fr",
-  "@@last_modified": "2026-01-05 15:41:57.996671",
+  "@@last_modified": "2026-01-05 16:38:38.848549",
   "about": "À propos",
   "@about": {
     "type": "String",
@@ -11047,6 +11047,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "Pour la meilleure expérience avec cette application, veuillez agrandir la taille de votre écran.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
