--- a/lib/l10n/intl_he.arb
+++ b/lib/l10n/intl_he.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2026-01-05 15:40:47.743886",
+  "@@last_modified": "2026-01-05 16:37:50.615411",
   "about": "אודות",
   "@about": {
     "type": "String",
@@ -11772,6 +11772,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "כדי לקבל את החוויה הטובה ביותר בשימוש באפליקציה זו, אנא הרחיבו את גודל המסך שלכם.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
