--- a/lib/l10n/intl_hi.arb
+++ b/lib/l10n/intl_hi.arb
@@ -4483,7 +4483,7 @@
   "playWithAI": "अभी के लिए एआई के साथ खेलें",
   "courseStartDesc": "पैंजिया बॉट कभी भी जाने के लिए तैयार है!\n\n...लेकिन दोस्तों के साथ सीखना बेहतर है!",
   "@@locale": "hi",
-  "@@last_modified": "2026-01-05 15:41:47.469587",
+  "@@last_modified": "2026-01-05 16:38:31.274500",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11808,6 +11808,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "इस एप्लिकेशन का सर्वोत्तम अनुभव प्राप्त करने के लिए, कृपया अपनी स्क्रीन का आकार बढ़ाएँ।",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
