--- a/lib/l10n/intl_ia.arb
+++ b/lib/l10n/intl_ia.arb
@@ -1958,7 +1958,7 @@
   "playWithAI": "Joca con le IA pro ora",
   "courseStartDesc": "Pangea Bot es preste a comenzar a qualunque momento!\n\n...ma apprender es melior con amicos!",
   "@@locale": "ia",
-  "@@last_modified": "2026-01-05 15:40:49.395999",
+  "@@last_modified": "2026-01-05 16:37:51.436479",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11801,6 +11801,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "Per la mejor experiencia usando esta aplicación, por favor expande el tamaño de tu pantalla.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
