--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2026-01-05 15:41:01.965793",
+  "@@last_modified": "2026-01-05 16:38:00.729830",
   "about": "Informazioni",
   "@about": {
     "type": "String",
@@ -10726,6 +10726,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "Per la migliore esperienza nell'utilizzo di questa applicazione, si prega di espandere la dimensione dello schermo.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
