--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ja",
-  "@@last_modified": "2026-01-05 15:41:45.314854",
+  "@@last_modified": "2026-01-05 16:38:29.839926",
   "about": "このアプリについて",
   "@about": {
     "type": "String",
@@ -11513,6 +11513,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "このアプリケーションを最適に使用するには、画面サイズを拡大してください。",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
