--- a/lib/l10n/intl_nl.arb
+++ b/lib/l10n/intl_nl.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2026-01-05 15:41:30.879952",
+  "@@last_modified": "2026-01-05 16:38:20.626242",
   "about": "Over ons",
   "@about": {
     "type": "String",
@@ -10723,6 +10723,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "Voor de beste ervaring met deze applicatie, vergroot alstublieft uw schermgrootte.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
