--- a/lib/l10n/intl_pt_PT.arb
+++ b/lib/l10n/intl_pt_PT.arb
@@ -3331,7 +3331,7 @@
   "selectAll": "Selecionar tudo",
   "deselectAll": "Desmarcar tudo",
   "@@locale": "pt_PT",
-  "@@last_modified": "2026-01-05 15:41:13.008330",
+  "@@last_modified": "2026-01-05 16:38:09.051462",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11752,6 +11752,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "Para a melhor experiência ao usar este aplicativo, por favor, amplie o tamanho da sua tela.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
