--- a/lib/l10n/intl_sv.arb
+++ b/lib/l10n/intl_sv.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2026-01-05 15:41:41.694366",
+  "@@last_modified": "2026-01-05 16:38:27.488003",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -11201,6 +11201,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "För bästa upplevelse med denna applikation, vänligen utöka din skärmstorlek.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
