--- a/lib/l10n/intl_th.arb
+++ b/lib/l10n/intl_th.arb
@@ -4456,7 +4456,7 @@
   "playWithAI": "เล่นกับ AI ชั่วคราว",
   "courseStartDesc": "Pangea Bot พร้อมที่จะเริ่มต้นได้ทุกเมื่อ!\n\n...แต่การเรียนรู้ดีกว่ากับเพื่อน!",
   "@@locale": "th",
-  "@@last_modified": "2026-01-05 15:41:11.186302",
+  "@@last_modified": "2026-01-05 16:38:08.017220",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11781,6 +11781,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "เพื่อประสบการณ์ที่ดีที่สุดในการใช้แอปพลิเคชันนี้ โปรดขยายขนาดหน้าจอของคุณ.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
