--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "tr",
-  "@@last_modified": "2026-01-05 15:41:21.358224",
+  "@@last_modified": "2026-01-05 16:38:14.793952",
   "about": "Hakkında",
   "@about": {
     "type": "String",
@@ -10945,6 +10945,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "Bu uygulamayı en iyi şekilde kullanabilmek için lütfen ekran boyutunuzu genişletin.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
