--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "uk",
-  "@@last_modified": "2026-01-05 15:41:03.338417",
+  "@@last_modified": "2026-01-05 16:38:01.988748",
   "about": "Про застосунок",
   "@about": {
     "type": "String",
@@ -10717,6 +10717,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "Для найкращого досвіду використання цього додатку, будь ласка, розширте розмір екрану.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
