--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2026-01-05 15:41:26.777475",
+  "@@last_modified": "2026-01-05 16:38:18.272455",
   "about": "Giới thiệu",
   "@about": {
     "type": "String",
@@ -6293,6 +6293,11 @@
     "placeholders": {}
   },
   "@genericWebRecordingError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "screenSizeWarning": "Để có trải nghiệm tốt nhất khi sử dụng ứng dụng này, vui lòng mở rộng kích thước màn hình của bạn.",
+  "@screenSizeWarning": {
     "type": "String",
     "placeholders": {}
   }
